NCL-7777 Fix jumping tabs and extract TabsLabel component

--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -2,3 +2,21 @@
   top: 0;
   z-index: 100;
 }
+
+.page-section-tabs :global(.pf-c-tabs) {
+  min-height: 42px;
+}
+
+.page-section-tabs :global(.pf-c-label) {
+  padding: 0px 4px;
+}
+
+.page-section-tabs :global(.pf-c-label__content) {
+  min-width: 25px;
+  height: 22px;
+  justify-content: center;
+}
+
+.page-section-tabs :global(.pf-c-spinner) {
+  height: 11px;
+}
